# Aegis

./: .env.example  .gitignore  2026-03-29-production-rag-plan.md  ARCHITECTURE.md  ARCHITECTURE_LOCK.md  CLAUDE.md  DEMO_RUN_LOG.txt  PROJECT_CONTEXT_HANDOFF.md  README.md  multi_modal_rag.ipynb  pyproject.toml  requirements.txt  test.txt
Context/: 2026-03-29-production-rag-plan.md  ARCHITECTURE_LOCK.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  PROJECT_CONTEXT_HANDOFF.md
data/: weather_mock.json
src/aegis/: __init__.py  config.py
src/aegis/ac_control/: __init__.py  classifier.py  client.py  server.py
src/aegis/api/: __init__.py  main.py
src/aegis/billing/: __init__.py  answerer.py  cli.py  config.py  llm_formatter.py  query_classifier.py  types.py
src/aegis/chunking/: __init__.py  base.py  pdf_chunker.py  recursive_chunker.py  section_chunker.py
src/aegis/core/: config.py  orchestrator.py
src/aegis/mcp_server/: __init__.py
src/aegis/services/: __init__.py
tests/: conftest.py  test_ac_classifier.py  test_ac_client.py  test_answerer_grounding.py  test_bill_schema_mapping.py  test_billing_cli_integration.py  test_embeddings.py  test_extractors.py  test_format_detection.py  test_llm_formatter.py  test_msedcl_parser.py  test_normalize.py  test_orchestrator.py  test_query_classifier.py  test_query_classifier_extended.py  test_retriever_logic.py  test_streamlit_app.py  test_weather_advisor.py  test_weather_fetcher.py
tests/integration/: conftest.py  test_ac_classifier.py  test_billing_pipeline.py  test_orchestrator_routing.py  test_weather_advisor.py
(+25 files in other folders)
